apps/victoria-metrics/deployment.yaml
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: victoria-metrics
spec:
  serviceName: victoria-service
  replicas: 1
  selector:
    matchLabels:
      app: victoria-metrics
  template:
    metadata:
      labels:
        app: victoria-metrics
    spec:
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
              - matchExpressions:
                  - key: kubernetes.io/hostname
                    operator: In
                    values:
                      - althea
      containers:
        - name: victoria-metrics
          image: victoriametrics/victoria-metrics:v1.143.0-scratch
          args: ["--retentionPeriod=100y"]
          ports:
            - containerPort: 8428
          volumeMounts:
            - name: victoria-metrics-data
              mountPath: /victoria-metrics-data
  volumeClaimTemplates:
    - metadata:
        name: victoria-metrics-data
      spec:
        accessModes:
          - ReadWriteOnce
        storageClassName: local-storage
        resources:
          requests:
            storage: 4Gi
